--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@
 			.menudiv{
 				width: 100vw;
 			}
+			.contact{
+				text-align: center; display: grid; margin: 0; margin-top: 0; grid-template-columns: auto;
+				grid-template-rows: auto auto auto; color: white; justify-content: center;
+			}
 		}
 
 
