--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
 			width:96vw; margin-left: 2vw; margin-right: 2vw;
 			}
 		.para1{
-				font-size: 8vw;
+				font-size: 6vw;
 			}
 		.link1,
 		.link2{
@@ -99,7 +99,7 @@
 			}
 		.project1para,
 		.project2para{
-				font-size: 8vw;
+				font-size: 6vw;
 			}
 		.footer{
 				font-size: 3vw;
@@ -124,10 +124,17 @@
 			}
 			.menudiv{
 				width: 100vw;
+				background: black;
 			}
 			.contact{
-				text-align: center; display: grid; margin: 0; margin-top: 0; grid-template-columns: auto;
-				grid-template-rows: auto auto auto; color: white; justify-content: center;
+				text-align: center; display: flex; margin: 0; margin-top: 0;/* grid-template-columns: auto;
+				grid-template-rows: auto auto auto;*/ color: white; justify-content: center;
+			}
+			.linkedindiv{
+				margin-right: 4vw;
+			}
+			.githubdiv{
+				margin-left: 4vw;
 			}
 		}
 
@@ -198,7 +205,8 @@
 		}
 		.project1about,
 		.project2about{
-			display: grid; grid-template-columns: auto; grid-template-rows: 2fr 1fr;
+			display: grid; grid-template-columns: auto; grid-template-rows: auto auto; grid-gap: 20px; margin: 3vw;
+			padding: 1vw; color: inherit; text-decoration: none;
 		}
 		.project1,
 		.project2{
@@ -209,12 +217,12 @@
 			text-align: center;
 		}
 		.menudiv{
-			display: none; position: sticky; height: 100vh; background-color: rgba(120,60,0,1);
+			display: none; position: sticky; height: 100vh; background-color: rgba(0,0,0,1);
 			backdrop-filter: blur(10px); right: 0; padding: 30px; text-decoration: none; list-style-type: none;
-			color: white; opacity: 1; z-index: 2; bottom: 0;
+			color: white; opacity: 1; z-index: 2; bottom: 0; justify-items: center; align-items: center;
 		}
 		.menudiv li{
-			padding: 40px 0; font-size: 4vh; color: hsl(180, 80%, 60%); list-style-type: none;
+			padding: 40px 0; font-size: 4vh; color: hsl(24, 100%, 53%); list-style-type: none;
 		}
 		.navlink{
 			color: white;
