--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 			font-size: clamp(2.5rem, 8vw, 5rem);
 			}
 		.prabhlogo{
-			position: relative; width: clamp(7.5rem,20vw,12rem); height: 15vh; padding-right: 45vw;
+			position: relative; width: clamp(7.5rem,20vw,12rem); height: 15vh; padding-right: 30vw;
 			filter: hue-rotate(var(--hue-value, 0deg)); height: 15vh;
 		}
 		.desktoplogo{
@@ -65,6 +65,9 @@
 			}
 			.footer{
 				margin-left: 15vw; margin-right: 15vw;
+			}
+			.resumeSpan{
+				display: block;
 			}
 		}
 
@@ -137,6 +140,9 @@
 			.githubdiv{
 				margin-left: 4vw;
 			}
+			.resumeSpan{
+				display: none;
+			}
 		}
 
 
@@ -146,7 +152,7 @@
 		}
 		.ul{
 			color: #ffffff; margin: 0; padding-left: 0; list-style: none; grid-template-rows: auto;
-			grid-template-columns: auto auto auto; align-content: center;
+			grid-template-columns: auto auto auto auto; align-content: center;
 		}
 		.li{
 			text-align: center; font-family: monospace; font-size: 1.8rem; cursor: pointer; border: 2px solid white;
@@ -183,6 +189,29 @@
 			to{
 				transform: rotate(360deg);
 			}
+		}
+		.li_menu_div{
+			overflow: hidden;
+		}
+		.li_menu_div::before{
+			content:'';
+			left:-20%;
+			top: 10%;
+			position: absolute;
+			width: 140%;
+			height:70%;
+			background: linear-gradient(#00ccff,#d500f9);
+			animation: rotate 3s linear infinite;
+			border-radius: 12px;
+			z-index: -999;
+		}
+		.li_menu_div::after{
+			content:'';
+			position: absolute;
+			Background: #171717;
+			inset: 5px;
+			border-radius: 12px;
+			z-index: -10;
 		}
 		.projecth1{
 			display:grid; grid-template-rows: auto;grid-template-columns: auto auto; justify-content: center;
@@ -251,7 +280,8 @@
 			color: white; opacity: 1; z-index: 2; bottom: 0; justify-items: center; align-items: center;
 		}
 		.menudiv li{
-			padding: 40px 0; font-size: 4vh; color: hsl(24, 100%, 53%); list-style-type: none;
+			padding: 40px 0; font-size: 4vh; color: hsl(24, 100%, 53%); list-style-type: none; margin: 20px; text-align: center;
+			border-radius: 12px;
 		}
 		.navlink{
 			color: white;
