--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@
 			width: 140%;
 			height:70%;
 			background: linear-gradient(#00ccff,#d500f9);
-			animation: rotate 3s linear infinite;
+			animation: rotate 8s linear infinite;
 			border-radius: 12px;
 			z-index: -999;
 		}
@@ -277,7 +277,7 @@
 		.menudiv{
 			display: none; position: sticky; height: 100vh; background-color: rgba(0,0,0,1);
 			backdrop-filter: blur(10px); right: 0; padding: 30px; text-decoration: none; list-style-type: none;
-			color: white; opacity: 1; z-index: 2; bottom: 0; justify-items: center; align-items: center;
+			color: white; opacity: 1; z-index: 2; bottom: 0; justify-items: center; align-items: center; margin: 0;
 		}
 		.menudiv li{
 			padding: 40px 0; font-size: 4vh; color: hsl(24, 100%, 53%); list-style-type: none; margin: 20px; text-align: center;
