--- a/style.css
+++ b/style.css
@@ -200,8 +200,8 @@
 			position: absolute;
 			width: 140%;
 			height:70%;
-			background: linear-gradient(#00ccff,#d500f9);
-			animation: rotate 8s linear infinite;
+/* 			background: linear-gradient(#00ccff,#d500f9); */
+/* 			animation: rotate 8s linear infinite; */
 			border-radius: 12px;
 			z-index: -999;
 		}
